--- a/museum discovery/1/style.css
+++ b/museum discovery/1/style.css
@@ -2,6 +2,25 @@ body {
     background-color: black;
     cursor: none !important; /* 使用 !important 以确保覆盖其他可能存在的样式 */
 }
+.dotgothic16-regular {
+    font-family: "DotGothic16", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
+body {
+    font-family: 'DotGothic16', sans-serif;
+}
+
+header {
+    color: aliceblue;
+    font-size: 3.5em;
+    font-family: 'DotGothic16', sans-serif;
+    text-align: center;
+}
+
+
 
 .custom-cursor {
     width: 260px;  
@@ -25,3 +44,10 @@ span {
     height: auto;
     text-align: center;
 }
+.all{
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
