--- a/museum discovery/4/style.css
+++ b/museum discovery/4/style.css
@@ -22,7 +22,7 @@ header {
     font-family: 'Dokdo', sans-serif;
     position: absolute;
     top: 30px;
-    left: 3em;
+    left: 4em;
 
 }
 p{
@@ -31,7 +31,7 @@ p{
     font-family: Smooch Sans;
     position: absolute;
     top: 5em;
-    left: 7em;
+    left: 13em;
     
 }
 
@@ -61,15 +61,10 @@ span {
     height: auto;
     text-align: center;
     padding: 80px;
-    padding-top: 15em;
+    padding-top: 20em;
+    padding-left: 35em;
 }
-.write{
-    position: absolute;
-    top: 9em;
-    left: 67em;
-    
 
-}
 .all {
     display: flex;
     justify-content: space-around;
@@ -88,15 +83,6 @@ span {
     height: 130px;
 }
 
-.all a:last-child img {
-    width: 130px;
-    height: 130px;
-}
-
-.all a:first-child img {
-    width: 159px;
-    height: 130px;
-}
 .home{
     position: absolute;
     right: 60px;
