--- a/chinese seal carving/filter.css
+++ b/chinese seal carving/filter.css
@@ -2,6 +2,9 @@
     margin-bottom: 10px;
     margin-left: 900px;
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   #upload-container button {
@@ -13,7 +16,7 @@
     border-radius: 5px;
     border: none; 
     outline: none;
-    
+    height: 40px;
   }
 
   #image-input::file-selector-button {
@@ -27,6 +30,8 @@
     border-radius: 5px;
     border: none; 
     outline: none;
+    overflow: visible;
+    height: 40px;
   }
   
 
@@ -42,7 +47,6 @@
     border-radius: 5px;
   }
   #image-container {
-    display: none;
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
@@ -58,11 +62,26 @@
 
   input[type="file"]{
     color: transparent;
+    height: 40px;
   }
 
   #brush {
     fill: rgb(168, 3, 3);
     width: 70px;
     height: 70px;
+    height: 40px;
+    margin-left: 20px;
 
   }
+
+canvas{
+  border: 2px solid #9f1111;
+
+}
+@media (max-width: 700px) {
+ canvas {
+    width: 100%;
+    
+  }
+
+}
