--- a/chinese seal carving/filter.css
+++ b/chinese seal carving/filter.css
@@ -15,8 +15,8 @@
   #upload-container button {
     padding: 10px 20px;
     font-size: 20px; 
-    color: #ffffff;
-    background-color: #c41212;
+    color: #c41212;
+    background-color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
     border: none; 
@@ -24,12 +24,24 @@
     height: 40px;
     width: auto;
     white-space: nowrap;
+    font-family: Huiwen-mincho;
+    border: 2px solid #c12525;
+  }
+
+  #upload-container button:hover {
+    background-color: #c12525;
+    color: #ffffff; 
+  }
+
+  #image-input::file-selector-button:hover {
+    background-color: #c12525;
+    color: #ffffff; 
   }
 
   #image-input::file-selector-button {
     font-size: 20px;
-    color: #ffffff;
-    background-color: #c41212;
+    color: #c41212;
+    background-color: #ffffff;
     /* display: inline-block; */
     /* margin-bottom: 10px; */
     padding: 10px 20px; 
@@ -39,6 +51,8 @@
     outline: none;
     /* overflow: visible; */
     height: 40px;
+    font-family: Huiwen-mincho;
+    border: 2px solid #c12525;
   }
   
 
@@ -47,12 +61,19 @@
     font-size: 20px;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #c41212;
-    color: #fff;
+    /* background-image: url(frame.png); */
+    color: #a70000;
     text-decoration: none;
     border-radius: 5px;
+    font-family: Huiwen-mincho;
+    border: 2px solid #c12525;
   }
   
+  #download-button:hover {
+    background-color: #c12525;
+    color: #ffffff; 
+  }
+
   
   #image-container {
     display: flex;
@@ -85,7 +106,7 @@ h3{
   font-size: 2vw;
   color: #c41212;
   font-family: Huiwen-mincho;
-  padding-left: 14vw;
+  padding-left: 20vw;
   text-decoration: underline;
   text-decoration-color: #c41212;
 }
@@ -100,8 +121,8 @@ canvas{
     
   }
  h3 {
-  font-size: 5vw;
-  padding-left: 30vw;
+  font-size: 4vw;
+  padding-left: 37vw;
 
  }
  #download-container{
